--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
   
-<img src = "illusion.jpeg" height = "42" width = "42">
+<img src = "https://www.google.ca/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=0ahUKEwjc1MqNhsXQAhVK54MKHbaGCLUQjRwIBw&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3DRhw9BxBDvzk&psig=AFQjCNG1CVIdr4bK-s9zLDqEM-_GmfTFIg&ust=1480202455458740" height = "42" width = "42">
 
 </body>
 </html>
