--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   
-<img src = "illusion.jpeg" height = "42" width = "42">
+<img src = "illusion.jpg" height = "420" width = "420">
 
 </body>
 </html>
