--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link href = "style.css" type = "text/css" rel = "stylesheet">
 <title> Pranav's Website!</title>
 
 </head> 
 
 <body>
-  
-<img src = "illusion.jpg" height = "420" width = "420">
 
+  <h1>Pranav's Website!</h1>
+  
 </body>
 </html>
