--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> 
 
 <body>
-<div class = "titlebox">
+<div class = "titlebox" style = "width: 100px; height: 100px; border: 1px solid #000;">
   <h1>Pranav's Website!</h1>
   </div> 
 </body>
