--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
   <h1 class = "title">Pranav's Website!</h1>
 
+  <div class = "buttongeneral">
+    <div class = "option1">
+      <a href = "youtube.com" class = "buttongeneral">Youtube </a>
+    </div>
+  </div>
 </body>
 </html>
