--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
   <h1 class = "title">Pranav's Website!</h1>
 
-  <div class = "buttongeneral">
-    <div class = "option1">
-      <a href = "youtube.com" class = "buttongeneral">Youtube </a>
+  <div class = "round-button">
+    <div class = "round-button-circle">
+      <a href = "youtube.com" class = "round-button">Youtube </a>
     </div>
   </div>
 </body>
