--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <div class = "container">
     <div class = "col-md-6">
-      <h1 id = "title"> Pranav's Website </h1>
+      <h1> Pranav's Website </h1>
     </div>
   </div>
   
