--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head> 
 
 <body>
@@ -21,5 +16,14 @@
     </div>
   </div>
   
+  <ul class = "col-md-8">
+    <li>About</li>
+    <li>OPTION2</li>
+    <li>OPTION3</li>
+    <li>OPTION4</li>
+  </ul>
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
