--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     </div>
   </div>
   
-  <ul class = "col-md-8">
-    <li>About</li>
-    <li>OPTION2</li>
-    <li>OPTION3</li>
-    <li>OPTION4</li>
+  <ul class = "navbar">
+    <li class = "">About</li>
+    <li class = "">OPTION2</li>
+    <li class = >OPTION3</li>
+    <li class = >OPTION4</li>
   </ul>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
