--- a/index.html
+++ b/index.html
@@ -9,20 +9,17 @@
 </head> 
 
 <body>
-
-  <div class = "container">
-    <div class = "col-md-6">
-      <h1> Pranav's Website </h1>
-    </div>
+<header class="container">
+  <div class = "row">
+      <h1 class = "col-sm-4"> Pranav's Website </h1>
+  
+<nav class = "col-sm-8 text-right">
+  <p>OPTION1</p>
+  <p>OPTION2</p>
+  <p>OPTION3</p>
+    </nav>
   </div>
-  
-  <ul class = "navbar">
-    <li class = "">About</li>
-    <li class = "">OPTION2</li>
-    <li class = >OPTION3</li>
-    <li class = >OPTION4</li>
-  </ul>
-  
+  </header>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
