--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class = "col-sm-4"> Pranav's Website </h1>
   
 <nav class = "col-sm-8 text-right">
-  <p>OPTION1</p>
-  <p>OPTION2</p>
-  <p>OPTION3</p>
+  <a href = "OPTION1.html"><p>OPTION1</p></a>
+  <a href = "OPTION2.html"><p>OPTION2</p></a>
+  <a href = "OPTION3.html"><p>OPTION3</p></a>
     </nav>
   </div>
   </header>
