--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <h1 class = "col-sm-4"> Pranav's Website </h1>
   
 <nav class = "col-sm-8 text-right">
-  <a href = "OPTION1.html" class = "nav"><p>OPTION1</p></a>
+  <a href = "gallery.html" class = "nav"><p>OPTION1</p></a>
   <a href = "OPTION2.html" class = "nav"><p>OPTION2</p></a>
   <a href = "OPTION3.html" class = "nav"><p>OPTION3</p></a>
     </nav>
