--- a/gallery.html
+++ b/gallery.html
@@ -1,3 +1,2 @@
 <p class = "gallery_title"> "Streak" by Dev Patel </p>
-
-<img src = "Screenshot_2016-09-08-20-46-26.png" class = "dev">
+<img src = "Screenshot_2016-09-08-20-46-26.png" class = "dev" height = "50" width = "50">
