--- a/gallery.html
+++ b/gallery.html
@@ -1,2 +1,11 @@
+<html>
+  <head>
+  <link  rel = "stylesheet" href = "style.css" type = "text/css">
+  </head>
+  <body>
 <p class = "gallery_title"> "Streak" by Dev Patel </p>
 <img src = "Screenshot_2016-09-08-20-46-26.png" class = "dev" height = "700" width = "50%">
+    
+  </body>
+  
+</html>
