--- a/gallery.html
+++ b/gallery.html
@@ -3,9 +3,10 @@
   <link  rel = "stylesheet" href = "style.css" type = "text/css">
   </head>
   <body>
-<p class = "gallery_title"> "Streak" by Dev Patel </p>
+    <div class = "gallery_title">
+<p> "Streak" by Dev Patel </p>
 <img src = "Screenshot_2016-09-08-20-46-26.png" class = "dev" height = "700" width = "50%">
-    
+    </div>
   </body>
   
 </html>
