--- a/gallery.html
+++ b/gallery.html
@@ -3,8 +3,13 @@
   <link  rel = "stylesheet" href = "style.css" type = "text/css">
   </head>
   <body>
+    <section class = "container">
+      
+      <figure class = "col-sm-6">
 <p class = "gallery_title"> "Streak" by Dev Patel </p>
 <img src = "Screenshot_2016-09-08-20-46-26.png" class = "dev" height = "700" width = "50%">
+      </figure>
+    </section>
   </body>
   
 </html>
