--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
       
       <figure class = "col-sm-6">
         <p> "Look, i'm Patrick!" by Kevin Chen </p>
-        <img src = "">
+        <img src = "Screenshot_2016-05-24-21-40-46.png">
       </figure>
     </section>
   </body>
