--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
   <body>
     
     <section class = "container">
-      
+      <div class = "row">
       <figure class = "col-sm-6">
 <p> "Streak" by Dev Patel </p>
 <img src = "Screenshot_2016-09-08-20-46-26.png">
@@ -15,6 +15,7 @@
         <p> "Look, i'm Patrick!" by Kevin Chen </p>
         <img src = "gallery_pictures/Screenshot_2016-05-24-21-40-46.png">
       </figure>
+      </div>
     </section>
   </body>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
