--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,9 @@
- <section class = "container">
+<head> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"></head> 
+
+
+
+
+<section class = "container">
     <div class = "row">
       <figure class = "col-sm-6">
         <p> kitchen </p>
