--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <head>
   <title> Pranav's Website!</title>
 <link href = "style.css" type = "text/css" rel = "stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head> 
 
 <body>
-<header class="container">
-  <div class = "row">
-      <h1 class = "col-sm-4"> Pranav's Website </h1>
+  <nav class = "navbar navbar-fixed-top">
+  <div class = "container">
+    <div class = "navbar-header">
+      <a href = "" class = "navbar-brand">Pranav's Website</a>
+    </div>
+    </div>
+  </nav>
   
-<nav class = "col-sm-8 text-right">
-  <a href = "gallery.html" class = "nav"><p>Gallery</p></a>
-  <a href = "OPTION2.html" class = "nav"><p>OPTION2</p></a>
-  <a href = "OPTION3.html" class = "nav"><p>OPTION3</p></a>
-    </nav>
-  </div>
-  </header>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </body>
 </html>
