--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head> 
 
 <body>
-  <nav class = "navbar navbar-fixed-top navbar-inverse">
+  <nav class = "navbar navbar-inverse navbar-fixed-top">
   <div class = "container">
     <div class = "navbar-header">
       <a href = "" class = "navbar-brand">Pranav's Website</a>
