--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <nav class = "navbar navbar-inverse navbar-fixed-top">
   <div class = "container">
     <div class = "navbar-header">
-      <a href = "" class = "navbar-brand">Pranav's Website</a>
+      <h1 class = "navbar-brand">Pranav's Website</h1>
     </div>
     </div>
   </nav>
