--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <div class = "navbar-header">
       <a href = "" class = "navbar-brand">Pranav's Website</a>
     </div>
+    <div class = "container">
+      <ul>
+        <li><a href = "" >Gallery</a>
+      </ul>
+    </div>
     </div>
   </nav>
   
