--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 </head> 
 
 <body>
-  <nav class = "navbar navbar-inverse navbar-fixed-top">
+  <nav class = "navbar navbar-inverse navbar-fixed-top" id = "my-navbar">
   <div class = "container">
     <div class = "navbar-header">
+      <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#navbar-collapse">
+        <span class = "icon-bar"></span>
+        <span class = "icon-bar"></span>
+        <span class = "icon-bar"></span>
+        <span class = "icon-bar"></span>
+      </button>
       <a href = "" class = "navbar-brand">Pranav's Website</a>
-    </div>
-    <div class = "container">
-      <ul>
-        <li><a href = "" >Gallery</a>
-      </ul>
     </div>
     </div>
   </nav>
