--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
       </button>
       <a href = "" class = "navbar-brand">Pranav's Website</a>
     </div>
+    <div class = "collapse navbar-collapse" id="navbar-collapse">
+      <ul class = "nav navbar-nav">
+        <li><a href = "">Gallery</a></li>
+        <li><a href = "">OPTION2</a></li>
+        <li><a href = "">OPTION3</a></li>
+      </ul>
+    </div>
     </div>
   </nav>
   
