--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href = "" class = "navbar-brand">Pranav's Website</a>
     </div>
     <div class = "collapse navbar-collapse" id="navbar-collapse">
-      <ul class = "nav navbar-nav text-right">
+      <ul class = "nav navbar-nav options">
         <li><a href = "">Gallery</a></li>
         <li><a href = "">OPTION2</a></li>
         <li><a href = "">OPTION3</a></li>
