--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head> 
 
 <body>
-  <nav class = "navbar navbar-fixed-top" id = "my-navbar">
+  <nav class = "navbar navbar-inverse navbar-fixed-top" id = "my-navbar">
   <div class = "container">
     <div class = "navbar-header">
       <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#navbar-collapse">
@@ -22,7 +22,7 @@
       <a href = "" class = "navbar-brand">Pranav's Website</a>
     </div>
     <div class = "collapse navbar-collapse" id="navbar-collapse">
-      <ul class = "nav navbar-nav" id = "options">
+      <ul class = "nav navbar-nav">
         <li><a href = "">Gallery</a></li>
         <li><a href = "">OPTION2</a></li>
         <li><a href = "">OPTION3</a></li>
