--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <div class = "container">
     <div class = "jumbotron">
-      <img src = "">
+      <img src = "gallery_pictures/Screenshot_2016-04-01-17-45-00.png">
     </div>
   </div>
   
