--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   
   <div class = "container">
     <div class = "jumbotron">
+      <div class = "col-sm-6">
       <img src = "gallery_pictures/Screenshot_2016-04-01-17-45-00.png">
+        </div>
     </div>
   </div>
   
