--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div class = "container">
     <div class = "jumbotron">
       <div class = "col-sm-6">
-      <img src = "gallery_pictures/Screenshot_2016-04-01-17-45-00.png">
+        <h1 id = "jumbotitle"> This is my Wesite!</h1>
         </div>
     </div>
   </div>
