--- a/index.html
+++ b/index.html
@@ -10,37 +10,24 @@
 </head> 
 
 <body>
-  <nav class = "navbar navbar-inverse navbar-fixed-top" id = "my-navbar">
-  <div class = "container">
-    <div class = "navbar-header">
-      <button type = "button" class = "navbar-toggle" data-toggle = "collapse" data-target = "#navbar-collapse">
-        <span class = "icon-bar"></span>
-        <span class = "icon-bar"></span>
-        <span class = "icon-bar"></span>
-        <span class = "icon-bar"></span>
-      </button>
-      <a href = "" class = "navbar-brand">Pranav's Website</a>
-    </div>
-    <div class = "collapse navbar-collapse" id="navbar-collapse">
-      <ul class = "nav navbar-nav">
-        <li><a href = "">Gallery</a></li>
-        <li><a href = "">OPTION2</a></li>
-        <li><a href = "">OPTION3</a></li>
-      </ul>
-    </div>
-    </div>
-  </nav>
+
+<!-- NavIGATIONBAR -->
   
   <div class = "container">
-    <div class = "jumbotron">
-      <div class = "col-sm-6">
-        <h1 id = "jumbotitle"> This is my Wesite!</h1>
-        </div>
+    <div class = "row">
+      <header class = "col-sm-4">
+        <h1> Pranav's Website </h1>
+      </header>
     </div>
+    
+    <nav class = "col-sm-8 text-right">
+      <a href = "">OPTION1</a>
+      <a href = "">OPTION2</a>
+    </nav>
   </div>
   
-  <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
-
+<script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  
 </body>
 </html>
