--- a/index.html
+++ b/index.html
@@ -13,18 +13,16 @@
 
 <!-- NavIGATIONBAR -->
   
-  <div class = "container">
+  <header class = "container">
     <div class = "row">
-      <header class = "col-sm-4">
-        <h1> Pranav's Website </h1>
-      </header>
-    </div>
-    
+      <h1 class = "col-sm-4"> Pranav's Website </h1>
+      
     <nav class = "col-sm-8 text-right">
       <a href = "">OPTION1</a>
       <a href = "">OPTION2</a>
     </nav>
   </div>
+  </header>
   
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
