--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <h1 class = "col-sm-4"> Pranav's Website </h1>
       
     <nav class = "col-sm-8 text-right">
-      <a href = "">OPTION1</a>
+      <a href = "">OPTION1</a>|
       <a href = "">OPTION2</a>
     </nav>
   </div>
