--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class = "row">
       <h1 class = "col-sm-4"> Pranav's Website </h1>
       
-    <nav class = "col-sm-8 text-right">
+    <nav class = "col-sm-8 text-right" id = "navoptions">
       <a href = "">OPTION1</a>|
       <a href = "">OPTION2</a>
     </nav>
