--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
   
   <header class = "container">
     <div class = "row">
+      <div id = "title">
       <h1 class = "col-sm-4"> Pranav's Website </h1>
-      
-    <nav class = "col-sm-8 text-right" id = "navoptions">
+      </div>
+      <div id = "options">
+    <nav class = "col-sm-8 text-right">
       <a href = "">OPTION1</a>|
       <a href = "">OPTION2</a>
     </nav>
+      </div>
   </div>
   </header>
   
