--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div id = "options">
     <nav class = "col-sm-8 text-right">
-      <a href = "">OPTION1</a>|
+      <a href = "">OPTION1</a>
       <a href = "">OPTION2</a>
     </nav>
       </div>
