--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       </div>
       <div id = "options">
     <nav class = "col-sm-8 text-right">
-      <a href = "">OPTION1</a>
-      <a href = "">OPTION2</a>
+      <a href = "">Gallery</a>
+      <a href = "">Projects</a>
     </nav>
       </div>
   </div>
