--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div id = "options">
     <nav class = "col-sm-8 text-right">
       <a href = "">Gallery</a>
-      <a href = "">Projects</a>
+      <a href = "" id = "option2">Projects</a>
     </nav>
       </div>
   </div>
