--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <div id = "options">
     <nav class = "col-sm-8 text-right">
-      <a href = "">Gallery</a>
+      <a href = "options/gallery.html">Gallery</a>
       <a href = "" id = "option2">Projects</a>
     </nav>
       </div>
