--- a/options/gallery.html
+++ b/options/gallery.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title> Pranav's Website!</title>
+<link href = "style.css" type = "text/css" rel = "stylesheet">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+</head> 
+
+<body>
+
+<!-- NavIGATIONBAR -->
+  
+  <header class = "container">
+    <div class = "row">
+      <div id = "title">
+      <h1 class = "col-sm-4"> Pranav's Website </h1>
+      </div>
+      <div id = "options">
+    <nav class = "col-sm-8 text-right">
+      <a href = "options/gallery.html">Gallery</a>
+      <a href = "" id = "option2">Projects</a>
+    </nav>
+      </div>
+  </div>
+  </header>
+  
+<script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  
+</body>
+</html>
+Contact GitHub API Training Shop Blog About
+© 2016 GitHub, Inc. Terms Privacy Security Status Help
