--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     
     <div class = "container">
-      <div class = "jumbotron">
+      <div class = "jumbotron text-center">
         <h1>think of a totally banging slogan</h1>
         <p>think of toyally banging subtext</p>
       </div>
