--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     </nav>
     
     
-    <div class = "container">
-      <div class = "jumbotron text-center">
+    <div class = "container text-center">
+      <div class = "jumbotron">
         <h1>think of a totally banging slogan</h1>
         <p>think of toyally banging subtext</p>
       </div>
