--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class = "container text-center">
       <div class = "jumbotron">
         <h1>think of a totally banging slogan</h1>
-        <p>think of toyally banging subtext</p>
+        <p>think of totally banging subtext</p>
       </div>
     </div>
     
