--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
    
    <nav class = "navbar navbar-inverse navbar-fixed-top navbar-static-top">
      <div class = "container">
-       <a href = "#" class = "navbar-brand">Pranav's Website!</a>
+       <a href = "" class = "navbar-brand">Pranav's Website!</a>
        
        <ul class = "nav navbar-nav navbar-right">
          <li><a href = "index.html">Home</a> </li>
-         <li><a href = "gallery.html">Gallery</a> </li>
-         <li><a href = "projects.html"> Projects</a> </li>
+         <li><a href = "">Gallery</a> </li>
+         <li><a href = ""> Projects</a> </li>
        </ul>
      </div>
     </nav>
