--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
        
        <ul class = "nav navbar-nav navbar-right">
          <li><a href = "index.html">Home</a> </li>
-         <li><a href = "">Gallery</a> </li>
-         <li><a href = ""> Projects</a> </li>
+         <li><a href = "gallery.html">Gallery</a> </li>
+         <li><a href = "projects.html"> Projects</a> </li>
        </ul>
      </div>
     </nav>
