--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,8 @@
   <html>
   
 <head> 
+  
+  <link rel = "stylesheet" href = "style.css" type ="type/css">
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
@@ -25,7 +27,7 @@
     </nav>
     
     
-<div class = "container">
+<div class = "container" id = "projects">
       <a href = "scale.html">Planetary Scaling Tool</a>
     </div>
 
