--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,13 @@
      </div>
     </nav>
 
+    <div class = "container">
+         <div class = "row">
+              <div class = "col-md-6">
+                <p><a href = "#">Planetary Scale Tool</a></p>
+           </div>
+              </div>
+         </div>
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
