--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
     <div class = "container">
          <div class = "row">
               <div class = "col-md-6">
-                <p><a href = "#">Planetary Scale Tool</a></p>
+                <p>Planetary Scale Tool</p>
            </div>
               </div>
          </div>
