--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 <section class = "container">
   <div class = "row">
     <figure class = "col-sm-12">
-      <p><a>Planetary Scaling Tool</a></p>
+      <p><a href = "#">Planetary Scaling Tool</a></p>
     </figure>
   </div>
     </section>
