--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     </nav>
 
 
-      <p><a href = "#">Planetary Scaling Tool</a></p>
+      <p><a href = "index.html">Planetary Scaling Tool</a></p>
 
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <!-- Latest compiled and minified JavaScript -->
