--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,11 @@
     </nav>
 
 
-      <p><a href = "index.html">Planetary Scaling Tool</a></p>
+      <div class = "container">
+        <section>
+          <h2>Planetary Scaling Tool</h2>
+        </section>
+    </div>
 
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <!-- Latest compiled and minified JavaScript -->
