--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,9 @@
 
       <div class = "container">
         <section>
+          <div>
           <h2>Planetary Scaling Tool</h2>
+          </div>
         </section>
     </div>
 
