--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
 
       <div class = "container">
         <section>
-          <div>
+          <div class = "page-header">
           <h2>Planetary Scaling Tool</h2>
           </div>
         </section>
