--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
       <div class = "container">
         <section>
           <div class = "page-header">
-          <h2>Planetary Scaling Tool</h2>
+            <a><h2>Planetary Scaling Tool</h2></a>
           </div>
         </section>
     </div>
