--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,12 @@
      </div>
     </nav>
 
+    
+    <div class = "jumbotron">
+      <div class = "container">
+        <h1>My Projects</h1>
+        <div>
+    </div>
 
       <div class = "container">
         <section>
