--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     </nav>
 
     
-    <div class = "jumbotron">
+    <div class = "jumbotron align-items-center">
       <div class = "container">
         <h1>My Projects</h1>
         <div>
