--- a/projects.html
+++ b/projects.html
@@ -35,8 +35,8 @@
 
       <div class = "container">
         <section>
-          <div class = "page-header">
-            <a><h2>Planetary Scaling Tool</h2></a>
+          <div class = "text-left">
+            <a><h4>Planetary Scaling Tool</h4></a>
           </div>
         </section>
     </div>
