--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,7 @@
       <div class = "container">
         <section>
           <div class = "text-left">
-            <a><h4 class = "progect">Planetary Scaling Tool</h4></a>
+            <a href = "scale.html"><h4>Planetary Scaling Tool</h4></a>
           </div>
         </section>
     </div>
