--- a/scale.html
+++ b/scale.html
@@ -30,9 +30,9 @@
       </div>
     </div>
     
-    
+<script type="text/javascript" src="scale.js"></script>    
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
-<!-- Latest compiled and minified JavaScript -->
+<!-- Latest compiled and minified<script type="text/javascript" src="jquery-1.8.3.js"></script> JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   </body>
   
