--- a/scale.html
+++ b/scale.html
@@ -30,6 +30,10 @@
       </div>
     </div>
     
+    <div class = "container">
+      <h3>Planetary Scaling Tool!</h3>
+      <p>All units are in meters. </p>
+    </div>
 <script type="text/javascript" src="scale.js"></script>    
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <!-- Latest compiled and minified<script type="text/javascript" src="jquery-1.8.3.js"></script> JavaScript -->
