--- a/scale.html
+++ b/scale.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
   </head>
   
-  <body>
+  <body id = "thing">
    
    <nav class = "navbar navbar-inverse navbar-fixed-top navbar-static-top">
      <div class = "container">
