--- a/scale.html
+++ b/scale.html
@@ -48,16 +48,16 @@
         <th>Planet</th>
         <th>Diameter</th>
         <th>Distance from sun</th>
-        <th>Scaled distance</th>
+        <th>Scaled diameter</th>
         <th>Scaled distance from sun</th>
       </tr>
       
       <tr>
-        <td id = "mercury"></td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td id = "m"></td>
+        <td id = "md"></td>
+        <td id = "mds"></td>
+        <td id = "smd"></td>
+        <td id = "smds"></td>
       </tr>
     </table>
 <script type="text/javascript" src="scale.js"></script>    
