--- a/scale.html
+++ b/scale.html
@@ -59,6 +59,14 @@
         <td id = "smd"></td>
         <td id = "smds"></td>
       </tr>
+      
+       <tr>
+        <td id = "v"></td>
+        <td id = "vd"></td>
+        <td id = "vds"></td>
+        <td id = "svd"></td>
+        <td id = "svds"></td>
+      </tr>
     </table>
 <script type="text/javascript" src="scale.js"></script>    
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
