--- a/scale.html
+++ b/scale.html
@@ -67,6 +67,14 @@
         <td id = "svd"></td>
         <td id = "svds"></td>
       </tr>
+      
+       <tr>
+        <td id = "e"></td>
+        <td id = "ed"></td>
+        <td id = "eds"></td>
+        <td id = "sed"></td>
+        <td id = "seds"></td>
+      </tr>
     </table>
     
 <script type="text/javascript" src="scale.js"></script>    
