--- a/scale.html
+++ b/scale.html
@@ -75,6 +75,14 @@
         <td id = "sed"></td>
         <td id = "seds"></td>
       </tr>
+      
+      <tr>
+        <td id = "ms"></td>
+        <td id = "msd"></td>
+        <td id = "msds"></td>
+        <td id = "smsd"></td>
+        <td id = "smsds"></td>
+      </tr>
     </table>
     
 <script type="text/javascript" src="scale.js"></script>    
