--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,15 @@
           </div>
         </section>
     </div>
+        
+        <div class = "container">
+        <section>
+          <div class = "text-left">
+            <a href = "mlg.html"><h4>Mad Libs Generator</h4></a>
+          </div>
+        </section>
+    </div>
+
 
 <script src = "https://code.jquery.com/jquery-3.1.1.min.js"> </script>  
 <!-- Latest compiled and minified JavaScript -->
