--- a/mlg.html
+++ b/mlg.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html>
+ 
+  <head>
+    <script src="mlg.js"></script>
+  </head>
+  
+  <body>
+    
 <button onclick = "JOE()">Tester</button>
 
 <p id = "box"></p>
+    
+  </body>
+</html>
