--- a/mlg.html
+++ b/mlg.html
@@ -7,9 +7,9 @@
   
   <body>
     
-<button onclick = "JOE()">Tester</button>
+<button onclick = "myFunction()">Tester</button>
 
-<p id = "box"></p>
+<p id = "demo"></p>
     
   </body>
 </html>
