--- a/mlg.html
+++ b/mlg.html
@@ -12,4 +12,12 @@
 <p id = "demo"></p>
     
   </body>
+ 
+ <script>
+  function myFunction() {
+    var x = Math.floor((Math.random() * 10) + 1);
+    document.getElementById("demo").innerHTML = x;
+}
+
+ </script>
 </html>
