--- a/mlg.html
+++ b/mlg.html
@@ -2,22 +2,22 @@
 <html>
  
   <head>
-    <script src="mlg.js"></script>
+   <title>Mad Libs Generator</title>
   </head>
   
-  <body>
-    
-<button onclick = "myFunction()">Tester</button>
+  <body> 
+<button onclick = "mlg">Tester</button>
 
-<p id = "demo"></p>
-    
+   <p id = "result"></p>
   </body>
  
  <script>
-  function myFunction() {
-    var x = Math.floor((Math.random() * 10) + 1);
-    document.getElementById("demo").innerHTML = x;
-}
-
+ 
+  function mlg(){
+   
+   var computer = Math.floor((Math.random()*10)+1);
+   document.GetElementById("result")
+  }
+  
  </script>
 </html>
