--- a/mlg.html
+++ b/mlg.html
@@ -16,7 +16,7 @@
   function mlg(){
    
    var computer = Math.floor((Math.random()*10)+1);
-   document.GetElementById("result")
+   document.GetElementById("result").innerHTML = computer;
   }
   
  </script>
