--- a/mlg.html
+++ b/mlg.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
 <html>
- 
-  <head>
-   <title>Mad Libs Generator</title>
-  </head>
-  
-  <body> 
-<button onclick = "mlg">Tester</button>
+<body>
 
-   <p id = "result"></p>
-  </body>
- 
- <script>
- 
-  function mlg(){
-   
-   var computer = Math.floor((Math.random()*10)+1);
-   document.GetElementById("result").innerHTML = computer;
-  }
-  
- </script>
+<p>Click the button to display a random number between 1 and 10.</p>
+
+<button onclick="myFunction()">Try it</button>
+
+<p id="demo"></p>
+
+<script>
+function myFunction() {
+    var x = Math.floor((Math.random() * 10) + 1);
+    document.getElementById("demo").innerHTML = x;
+}
+</script>
+
+</body>
 </html>
