--- a/mlg.html
+++ b/mlg.html
@@ -5,7 +5,7 @@
 <h1>Click the button to play a Mad Libs puzzle!</h1>
     <p>This game is currently under development and I am still adding more puzzles.</p>
 
-<button onclick="ml">Try it</button>
+<button onclick="ml()">Try it</button>
 
 <p id="display"></p>
 
