--- a/mlg.html
+++ b/mlg.html
@@ -38,7 +38,7 @@ function ml() {
         document.write("1 or 2");
     }
     
-    document.GetElementById("display").innerHTML = x;
+    document.getElementById("display").innerHTML = x;
 }
 </script>
 
