--- a/mlg.html
+++ b/mlg.html
@@ -10,7 +10,7 @@
 <p id="display"></p>
 
 <script>
-function ml() {
+window.onload = function ml() {
     var x = Math.floor((Math.random() * 10) + 1);
     
     //mad lib 1
