--- a/mlg.html
+++ b/mlg.html
@@ -8,9 +8,9 @@
 <button onclick="ml()">Try it</button>
 
 <p id="display"></p>
-
+</body>
 <script>
-window.onload = function ml() {
+function ml() {
     var x = Math.floor((Math.random() * 10) + 1);
     
     //mad lib 1
@@ -41,6 +41,5 @@ window.onload = function ml() {
     document.getElementById("display").innerHTML = x;
 }
 </script>
-
-</body>
+    
 </html>
