--- a/mlg.html
+++ b/mlg.html
@@ -5,12 +5,12 @@
 
 <h1>Click the button to play a Mad Libs puzzle!</h1>
     <p>This game is currently under development and I am still adding more puzzles.</p>
-    <button type = "button" onclick = "ml()">Mad Libs!</button>
+    <button type = "button" onclick = "ml('display')">Mad Libs!</button>
 <p id="display"></p>
     
 
 <script>
-function ml() {
+function ml(display) {
     var x = Math.floor((Math.random() * 10) + 1);
     
     //mad lib 1
