--- a/mlg.html
+++ b/mlg.html
@@ -10,7 +10,7 @@
     <div class = "questions"></div>
     <button>Next</button>
     <script>
-       var prompts = [];
+       var prompts = ["A name", "An adjective", "A number", "An occupation"];
        
        var number = 0;
         
