--- a/mlg.html
+++ b/mlg.html
@@ -7,7 +7,7 @@
 
  <h1>Click the button to play a Mad Libs puzzle!</h1>
    
-    <div class = "questions"></div>
+    <p class = "questions">Please Enter:</p>
     <button>Next</button>
     <script>
        var prompts = ["A name", "An adjective", "A number", "An occupation"];
