--- a/mlg.html
+++ b/mlg.html
@@ -15,7 +15,7 @@
        var number = 0;
         
        var next = function(){
-        document.getElementsByClassName("questions").innerHTML = prompts[number];
+        document.getElementsByClassName("questions").innerHtml = prompts[number];
        };
        
        next();
