--- a/mlg.html
+++ b/mlg.html
@@ -9,7 +9,7 @@
  <h1>Mad Libs Generator</h1>
    
     <h4>Click the button below to Generate your Mad Lib!</h4>
-    <button>Next</button>
+    <button>Generate My Mad Lib</button>
     <p id = "result"></p>
     <script>
 
