--- a/mlg.html
+++ b/mlg.html
@@ -10,7 +10,8 @@
    
     <h4>Click the button below to Generate your Mad Lib!</h4>
     <button>Generate My Mad Lib</button>
-    <p id = "result"></p>
+    <p id = "result">My name is ___. If I were to describe myself in 1 word it would be___. I am ___ years old. I work as a ___. 
+</p>
     <script>
 
         var prompt1 = prompt("Please type a name.");
