--- a/mlg.html
+++ b/mlg.html
@@ -18,8 +18,9 @@
             }
             
             button {
-             font-size: 10px;
-             background-color: #4CFD8A;
+             font-size: 20px;
+             background-color: powderblue;
+             border-radius: 15px
             }
         </style>
         
