--- a/mlg.html
+++ b/mlg.html
@@ -30,7 +30,18 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     </head>
 <body>
-
+ <nav class = "navbar navbar-inverse navbar-fixed-top navbar-static-top">
+     <div class = "container">
+       <a href = "" class = "navbar-brand">Pranav's Website!</a>
+       
+       <ul class = "nav navbar-nav navbar-right">
+         <li><a href = "index.html">Home</a> </li>
+         <li><a href = "gallery.html">Gallery</a> </li>
+         <li><a href = "projects.html"> Projects</a> </li>
+       </ul>
+     </div>
+    </nav>
+    
  <h1>Mad Libs Generator</h1>
    
     <h4>Click the button below to Generate your Mad Lib!</h4>
