--- a/mlg.html
+++ b/mlg.html
@@ -11,6 +11,7 @@
             
             body {
              background-color: powderblue;   
+             font-family: Comic Sans MS, cursive, sans-serif
             }
             
             h4 {
