--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <ul class = "nav">
      <li> <a href = "index.html">Home</a> </li>
      <li> <a href = "projects.html">Projects</a> </li>
-     <li> <a href = "gallery.html">Gallery</a> </li>
+     <li> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
    
  </body>
