--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
  <body>
     
-   <ul>
+   <ul class = "nav">
      <li id = "header">Pranav's Website!</li>
      <li> <a href = "index.html">Home</a> </li>
      <li> <a href = "projects.html">Projects</a> </li>
