--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     
    <ul class = "nav">
-     <li id = "header">Pranav's Website!</li>
+    <li id = "header"><h1>Pranav's Website!</h1></li>
      <li> <a href = "index.html">Home</a> </li>
      <li> <a href = "projects.html">Projects</a> </li>
      <li> <a href = "gallery.html" class = "right">Gallery</a> </li>
