--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   
  <body>
     
-   <ul class = "nav">
+   <ul>
     <li id = "header">Pranav's Website!</li>
+    <div class = "nav">
      <li> <a href = "index.html">Home</a> </li>
      <li> <a href = "projects.html">Projects</a> </li>
      <li> <a href = "gallery.html" class = "right">Gallery</a> </li>
+    </div>
    </ul>
    
  </body>
