--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   
  <body>
     
-   <ul>
+   <ul class = "nav">
     <li id = "header">Pranav's Website!</li>
-    <div class = "nav">
      <li> <a href = "index.html">Home</a> </li>
      <li> <a href = "projects.html">Projects</a> </li>
      <li> <a href = "gallery.html" class = "right">Gallery</a> </li>
-    </div>
    </ul>
    
  </body>
