--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     
    <ul class = "nav">
     <li id = "header">Pranav's Website!</li>
-     <li> <a href = "index.html">Home</a> </li>
-     <li> <a href = "projects.html">Projects</a> </li>
-     <li> <a href = "gallery.html" class = "right">Gallery</a> </li>
+     <li class = "element"> <a href = "index.html">Home</a> </li>
+     <li class = "element"> <a href = "projects.html">Projects</a> </li>
+     <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
    
  </body>
