--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
      <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
    
+  <img width = "100" height = "100" src = "cool_space_galaxy_desktop_backgrounds_2-1024x636.jpg">
  </body>
 </html>
