--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
      <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
    
-  <img width = "1350" height = "550" src = "cool_space_galaxy_desktop_backgrounds_2-1024x636.jpg">
+  <img width = "1350" height = "550" src = "cool_space_galaxy_desktop_backgrounds_2-1024x636.jpg" id = "indeximg">
  </body>
 </html>
