--- a/projects.html
+++ b/projects.html
@@ -14,5 +14,9 @@
      <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
    
+  <div>
+   <h3><a href = "scale.html">Planetary Scaling Tool</a></h3>
+   <h3><a href = "mlg.html">Mad libs Puzzle</a></h3>
+  </div>
  </body>
 </html>
