--- a/projects.html
+++ b/projects.html
@@ -6,17 +6,20 @@
  </head>
   
  <body>
-    
+    <div>
    <ul class = "nav">
     <li id = "header">Pranav's Website!</li>
      <li class = "element"> <a href = "index.html">Home</a> </li>
      <li class = "element"> <a href = "projects.html">Projects</a> </li>
      <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
    </ul>
-   
+  </div>
+  
   <div>
-   <h3><a href = "scale.html">Planetary Scaling Tool</a></h3>
-   <h3><a href = "mlg.html">Mad libs Puzzle</a></h3>
+   <ul>
+    <li><h3><a href = "scale.html">Planetary Scaling Tool</a></h3></li>
+    <li><h3><a href = "mlg.html">Mad libs Puzzle</a></h3></li>
+   </ul>
   </div>
  </body>
 </html>
