--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@
   </div>
   
   <div>
-   <ul>
-    <li><h3><a href = "scale.html">Planetary Scaling Tool</a></h3></li>
-    <li><h3><a href = "mlg.html">Mad libs Puzzle</a></h3></li>
+   <ul id = "projects">
+    <li class = "projects"><h3><a href = "scale.html">Planetary Scaling Tool</a></h3></li>
+    <li class = "projects"><h3><a href = "mlg.html">Mad libs Puzzle</a></h3></li>
    </ul>
   </div>
  </body>
