--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,8 @@
   </div>
   
 
-   <ul id = "projects">
-    <li class = "projects"><h3><a href = "scale.html">Planetary Scaling Tool</a></h3></li>
-    <li class = "projects"><h3><a href = "mlg.html">Mad libs Puzzle</a></h3></li>
-   </ul>
+    <h3><a href = "scale.html">Planetary Scaling Tool</a></h3></li>
+    <h3><a href = "mlg.html">Mad libs Puzzle</a></h3></li>
 
  </body>
 </html>
