--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <DOCTYPE! html>
-<html>  
- <head> 
+ <html>
+  <head>
    <title>Home</title>
-  <link rel = "stylesheet" type = "text/css" href = "style.css">
- </head>
+  </head>
   
- <body>
-    
-   <ul class = "nav">
-    <li id = "header">Pranav's Website!</li>
-     <li class = "element"> <a href = "index.html">Home</a> </li>
-     <li class = "element"> <a href = "projects.html">Projects</a> </li>
-     <li class = "element"> <a href = "gallery.html" class = "right">Gallery</a> </li>
+  <body>
+   
+   <ul>
+    <li>Home</li>
+    <li>Projects</li>
+    <li>Gallery</li>
    </ul>
    
-
- </body>
-</html>
+  </body>
+ </html>
