--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <html>
   <head>
    <title>Home</title>
-   <link type = "text/css" rel = "stylesheet" src = "style.css">
+   <link type = "text/css" rel = "stylesheet" href = "style.css">
   </head>
   
   <body>
