--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <body>
    
    <ul>
-    <li>Home</li>
-    <li>Projects</li>
-    <li>Gallery</li>
+    <li><a href = "index.html">Home</a></li>
+    <li><a href = "projects.html">Projects</a></li>
+    <li><a href = "gallery.html">Gallery</a></li>
    </ul>
    
   </body>
