--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   
   <body>
    
+   <div>
    <ul>
     <li><a href = "index.html">Home</a></li>
     <li><a href = "projects.html">Projects</a></li>
     <li><a href = "gallery.html">Gallery</a></li>
    </ul>
+   </div>
    
   </body>
  </html>
