--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
    
    <div>
    <ul>
-    <li><a href = "index.html">Home</a></li>
-    <li><a href = "projects.html">Projects</a></li>
-    <li><a href = "gallery.html">Gallery</a></li>
+    <li class = "element"><a href = "index.html">Home</a></li>
+    <li class = "element"><a href = "projects.html">Projects</a></li>
+    <li class = "element"><a href = "gallery.html">Gallery</a></li>
    </ul>
    </div>
    
