--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
    
    <div>
    <ul>
+    <div id = #tingy>
     <li class = "element"><a href = "index.html">Home</a></li>
     <li class = "element"><a href = "projects.html">Projects</a></li>
     <li class = "element"><a href = "gallery.html">Gallery</a></li>
+    </div>
    </ul>
    </div>
    
