--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
    
    <div>
    <ul>
-    <div id = #tingy>
+    <li><h3>Pranav's Website!</h3></li>
     <li class = "element"><a href = "index.html">Home</a></li>
     <li class = "element"><a href = "projects.html">Projects</a></li>
     <li class = "element"><a href = "gallery.html">Gallery</a></li>
-    </div>
    </ul>
    </div>
    
