--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    
    <div>
    <ul>
-    <li class = "header"><h3>Pranav's Website!</h3></li>
+    <li class = "header"><a href = ""><h3>Pranav's Website!</h3></a></li>
     <li class = "element"><a href = "index.html">Home</a></li>
     <li class = "element"><a href = "projects.html">Projects</a></li>
     <li class = "element"><a href = "gallery.html">Gallery</a></li>
