--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
    
    <div>
    <ul>
-    <li class = "header"><a href = ""><h3>Pranav's Website!</h3></a></li>
-    <li class = "element"><a href = "index.html">Home</a></li>
-    <li class = "element"><a href = "projects.html">Projects</a></li>
-    <li class = "element"><a href = "gallery.html">Gallery</a></li>
+    <li><a href = ""><h3>Pranav's Website!</h3></a></li>
+    <li><a href = "index.html">Home</a></li>
+    <li><a href = "projects.html">Projects</a></li>
+    <li><a href = "gallery.html">Gallery</a></li>
    </ul>
    </div>
    
